# Graved

./: CMakeLists.txt  README.md  compile.sh
.github/workflows/: codigo_fuente.yml
include/: array.h  enum.h  error.h  function.h  interpret.h  object.h  properties.h  protocol.h  str.h  variable.h
src/: array.c  enum.c  error.c  evaluator.c  function.c  interpret.c  main.c  object.c  properties.c  protocol.c  str.c  tokenizer.c  variable.c
